--- a/app/assets/stylesheets/import-style.scss
+++ b/app/assets/stylesheets/import-style.scss
@@ -1,3 +1,24 @@
 @import 'materialize';
 @import 'foundation-icons';
 @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,700';
+
+.container{
+	width: 100% !important;
+}
+
+body{
+	margin: 0px !important;
+}
+
+.brand-logo{
+	padding-left: 10px !important;
+	padding-right: 10px !important;
+	transition-property: background-color;
+	transition-duration: 0.3s;
+	transition-timing-function: ease;
+	transition-delay: 0s;
+}
+
+.brand-logo:hover{
+	background-color: rgba(0, 0, 0, 0.1) !important;
+}
