--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,6 +1,14 @@
-<ul id="dropdown_usuario" class="dropdown-content">
+<ul id="dropdown1" class="dropdown-content">
   <li><a href="#!">Cambiar contraseña</a></li>
   <li><%= link_to "Cerrar Sesión", destroy_usuario_session_path, method: :delete %></li>
+</ul>
+<ul id="dropdown2" class="dropdown-content">
+  <li><a href="#!">Cambiar contraseña</a></li>
+  <li><%= link_to "Cerrar Sesión", destroy_usuario_session_path, method: :delete %></li>
+</ul>
+<ul id="dropdown3" class="dropdown-content">
+  <li><%= link_to "Registrar siniestro", destroy_usuario_session_path, method: :delete %></li>
+  <li><a href="#!">Lista siniestros</a></li>
 </ul>
 
 <nav>
@@ -9,7 +17,8 @@
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <% if usuario_signed_in? %>
-         <li><a class="dropdown-button" href="#!" data-activates="dropdown_usuario"><%= @c_user.nombreUsuario %><i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a class="dropdown-trigger" href="#!" data-target="dropdown3">Sinestros<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Cuenta<i class="material-icons right">arrow_drop_down</i></a></li>
       <% else %>
         <li><%= link_to "Iniciar sesión", new_usuario_session_path %></li>
       <% end %>
@@ -19,19 +28,7 @@
 
 <ul class="sidenav" id="mobile-demo">
   <% if usuario_signed_in? %>
-      <li>
-          <ul class="collapsible collapsible-accordion">
-            <li>
-              <a class="collapsible-header">Productos<i class="material-icons">arrow_drop_down</i></a>
-              <div class="collapsible-body">
-                <ul>
-                  <li><a href="#!">Cambiar contraseña</a></li>
-                  <li><%= link_to "Cerrar Sesión", destroy_usuario_session_path, method: :delete %></li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-        </li>
+    <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Cuenta<i class="material-icons right">arrow_drop_down</i></a></li>
   <% else %>
     <li><%= link_to "Iniciar sesión", new_usuario_session_path %></li>
   <% end %>
